<resources>
    <string name="app_name">FavCars</string>
    <string name="title_all_cars">All Cars</string>
    <string name="title_favorite_cars">Favorites</string>
    <string name="title_random_cars">Random Car</string>
    <string name="splash_screen_title">FavCars</string>
    <string name="add_car">Add Car</string>

    <string name="title_image_select">Select Image Action</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>

    <string name="label_add_car">Add Car</string>
    <string name="image_content_description">image</string>
    <string name="name_add_car">Name</string>
    <string name="type_add_car">Type</string>
    <string name="price_add_car">Price Range</string>
    <string name="label_description">Description</string>
    <string name="label_engine_pow">Engine Power</string>
    <string name="label_review">Review (Optional)</string>
    <string name="item_value">Item</string>
    <string name="title_select_car_type">SELECT CAR TYPE</string>
    <string name="title_select_car_engine_pow">SELECT ENGINE POWER</string>
    <string name="title_select_car_price">SELECT CAR PRICE</string>
    <string name="err_msg_select_car_image">Please, upload a car image!</string>
    <string name="err_msg_name">Please, add name!</string>
    <string name="err_msg_type">Please, select car type!</string>
    <string name="err_msg_engine_power">Please, select the engine power!</string>
    <string name="err_msg_description">Please, add the description!</string>
    <string name="err_msg_price">Please, select the price!</string>
    <string name="label_no_cars_added">Empty!</string>
    <string name="label_car_name">Car Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_car_details_frag">"Car details "</string>
    <string name="image_contentDescription">car</string>
    <string name="label_review_title">Review</string>
    <string name="menu_edit_car">EDIT CAR</string>
    <string name="menu_delete_car">DELETE CAR</string>
</resources>