<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_cars">

    <fragment
        android:id="@+id/navigation_all_cars"
        android:name="com.example.favcars.view.fragments.AllCarsFragment"
        android:label="@string/title_all_cars"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite_cars"
        android:name="com.example.favcars.view.fragments.FavoriteCarsFragment"
        android:label="@string/title_favorite_cars"
        tools:layout="@layout/fragment_favorite_cars" />

    <fragment
        android:id="@+id/navigation_random_cars"
        android:name="com.example.favcars.view.fragments.RandomCarsFragment"
        android:label="@string/title_random_cars"
        tools:layout="@layout/fragment_random_cars" />
</navigation>