<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    app:chainUseRtl="true">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_image_select"
        android:textColor="@color/grey"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/label_camera"
        android:textColor="@color/grey"
        android:textSize="@dimen/_15sdp"
        app:drawableTopCompat="@drawable/ic_camera_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_gallery"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/label_gallery"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textSize="@dimen/_15sdp"
        app:drawableTopCompat="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/tv_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:ignore="UnusedAttribute" />
</androidx.constraintlayout.widget.ConstraintLayout>