<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".view.fragments.CarDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_car_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_car_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@color/grey_500"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/favorite_button_background"
                android:elevation="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/iv_favorite_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_favorite_unselected" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_car_image"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/blue_grey_mix"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            tools:text="Car Name" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/blue_grey_mix"
            android:textSize="@dimen/_16sdp"
            tools:text="Type" />

        <TextView
            android:id="@+id/tv_engine_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_14sdp"
            tools:text="Engine Power" />

        <TextView
            android:id="@+id/tv_title_price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_engine_power"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/price_add_car"
            android:textColor="@color/blue_grey_mix"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_price_range"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_14sdp"
            tools:text="Price " />

        <TextView
            android:id="@+id/tv_title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_price_range"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/label_description"
            android:textColor="@color/blue_grey_mix"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_description"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_14sdp"
            tools:text="Description" />

        <TextView
            android:id="@+id/tv_title_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/label_review_title"
            android:textColor="@color/blue_grey_mix"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_review"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_12sdp"
            tools:text="@string/label_review" />
    </RelativeLayout>

</ScrollView>